--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.2.5
+config==0.4.2
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11
@@ -6,6 +7,7 @@ django-bootstrap3==11.1.0
 django-heroku==0.3.1
 django-registration==2.4.1
 dodgy==0.1.9
+gunicorn==19.9.0
 isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
