--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pep8-naming==0.4.1
 Pillow==6.2.0
 prospector==1.1.7
 psycopg2==2.8.3
+psycopg2-binary==2.8.3
 pycodestyle==2.4.0
 pydocstyle==4.0.1
 pyflakes==1.6.0
